Bug 883688 - Mypage alignment

--- a/themes/fab/style.css
+++ b/themes/fab/style.css
@@ -238,6 +238,10 @@ html[dir='rtl'] .makeMenu li ul li {
 	height:56px;
 }
 
+td > .person_box {
+	height:76px;
+}
+
 .person_boxF {
 	background-color:#FDD;
 	overflow:visible;
